--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -41,5 +41,14 @@
       "2": 10,
       "3": 4
     }
+  },
+  "__version__": "1.0.6",
+  "fbx": {
+    "legacyFbxImporter": {
+      "visible": true
+    }
+  },
+  "script": {
+    "preserveSymlinks": true
   }
 }
